# AllayBE-Legacy

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md
include/: Server.h  ServerDefinitions.h
include/colors/: ConsoleColors.h
include/console/: Logger.h
include/exceptions/: Exceptions.h
include/managers/: PacketManager.h  PacketsHandlerManager.h  PlayerManager.h
include/misc/: BitStreamHelper.h  LibDeflateHelper.h  ZlibHelper.h
include/nbt/: Nbt.h  NbtTagDefinitions.h
include/nbt/list/: Compound.h  Double.h  Float.h  Int16.h  Int32.h  Int32Array.h  Int64.h  Int64Array.h  Int8.h  Int8Array.h  List.h  String.h  Tag.h
include/network/minecraft/: MinecraftVersionDefinitions.h
include/network/minecraft/constants/: ChatRestrictionLevels.h  CompressionAlgorithmTypes.h  CompressionThresholdTypes.h  Difficulties.h  Dimensions.h  GameModes.h  GameRuleTypes.h  Generators.h  MovementAuthorities.h  PermissionLevels.h  PlayStatus.h  PlayStatusTypes.h  ResourcePackClientResponses.h  XboxLiveBroadcastModes.h
include/network/minecraft/handlers/: LoginPacketHandler.h  PacketHandler.h  RequestNetworkSettingsPacketHandler.h  ResourcePackClientResponsePacketHandler.h
include/network/minecraft/packets/: BiomeDefinitionListPacket.h  CreativeContentPacket.h  GamePacket.h  LoginPacket.h  MinecraftPacket.h  NetworkSettingsPacket.h  PacketDefinitions.h  PlayStatusPacket.h  (+5 more)
include/network/raknet/: RakNetInterface.h  RakNetOfflineMessage.h
include/player/: Player.h
src/: Server.cpp  main.cpp
src/console/: Logger.cpp
src/managers/: PacketManager.cpp  PacketsHandlerManager.cpp  PlayerManager.cpp
src/misc/: BitStreamHelper.cpp  LibDeflateHelper.cpp  ZlibHelper.cpp
src/nbt/: Nbt.cpp
src/nbt/list/: Compound.cpp  Double.cpp  Float.cpp  Int16.cpp  Int32.cpp  Int32Array.cpp  Int64.cpp  Int64Array.cpp  Int8.cpp  Int8Array.cpp  List.cpp  String.cpp  Tag.cpp
src/network/raknet/: RakNetInterface.cpp  RakNetOfflineMessage.cpp
src/player/: Player.cpp
(+33 files in other folders)
